--- a/WinA/packages.config
+++ b/WinA/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AE.Net.Mail" version="1.7.10.0" targetFramework="net452" />
+  <package id="GemBox.Spreadsheet" version="37.3.30.1189" targetFramework="net45" />
   <package id="S22.Imap" version="3.6.0.0" targetFramework="net452" />
 </packages>
