New version w/o manual

--- a/WinA/WinA.csproj
+++ b/WinA/WinA.csproj
@@ -26,7 +26,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>22</ApplicationRevision>
+    <ApplicationRevision>24</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -52,7 +52,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>657286A126E9B349E2DAF25FFE40634CD1BB9C13</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>D50B4ED3584207A91190E134E75FFC5649808C1A</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestKeyFile>
@@ -103,6 +103,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
     <None Include="System audit results.oft" />
+    <None Include="WinA_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="Microsoft.Office.Core">
