--- a/NewWinAudit/NewWinAudit.csproj
+++ b/NewWinAudit/NewWinAudit.csproj
@@ -160,6 +160,20 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="notify.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>notify.txt</LastGenOutput>
+    </Content>
+    <Content Include="notify.txt">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>notify.tt</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
